<resources>
    <string name="app_name">ActivityTest</string>
    <string name="background_image">background image</string>
    <string name="desire_league">Desire League</string>
    <string name="desired_background">desired_background</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="others">Others</string>
    <string name="next">NEXT</string>
    <string name="swoosh_logo">swoosh_logo</string>
    <string name="welcomebg">welcomebg</string>
    <string name="go_all_in">Go ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find A Team In Your City And Dominate The League.</string>
    <string name="get_started">GET STARTED</string>
    <string name="skillbg">skillbg</string>
    <string name="i_am_a">I am a</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="exercisebg">exercisebg</string>
    <string name="textview">TextView</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
</resources>
